<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="userName">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="enter">Войти</string>
    <string name="hi_costumer">Привет, %s, что желаете?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="greetings">Привет, %s! Что желаете?</string>
    <string name="addities">Что добавить в ваш %s?</string>
    <string name="sugar">сахар</string>
    <string name="milk">молоко</string>
    <string name="lemon">лимон</string>
    <string name="choose_drink_type">Выберите вид напитка</string>
    <string name="make_order">сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives">Добавки:</string>
    <string name="error_fields_empty">Пожалуйста, заполните все поля</string>
    
    
    
    
    <array name="types_of_tea">
        <item>Зелёный</item>
        <item>Чёрный</item>
    </array>
    <array name="types_of_coffee">
        <item>Капучино</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </array>
</resources>